--- a/demo/inference_for_yolov5.ipynb
+++ b/demo/inference_for_yolov5.ipynb
@@ -25,7 +25,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.8.13 ('sahi-benchmark')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n sahi-benchmark ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "!pip install -U torch sahi yolov5"
    ]
@@ -636,7 +647,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('sahi')",
+   "display_name": "Python 3.8.13 ('sahi-benchmark')",
    "language": "python",
    "name": "python3"
   },
@@ -650,11 +661,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "f2680c47b11e1b3873482f0b7ab37c9292181f84f7b4413a77eb41d52d22c05d"
+    "hash": "ec4ff58cab623422d87a0040fa3cf0348daf1830e8a949b925db0b7b4618823f"
    }
   }
  },
