Update compare dsl and sahi

--- a/demo/create_genwts.ipynb
+++ b/demo/create_genwts.ipynb
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "23e39888",
+   "id": "eb5a8a12",
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2d7a2e5e",
+   "id": "0050fe49",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da5139e7",
+   "id": "3b4b9d68",
    "metadata": {},
    "source": [
     "## MOVE TO DSL_DATA_FOLDER"
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "4a6e64c0",
+   "id": "982772a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,12 +168,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6b95c5ad",
+   "execution_count": 19,
+   "id": "a7bf2ad4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mv "
+    "!mv yolov5_best.cfg yolov5_best.wts ~/aiboat/aiboat/APP/NAS/datas/FLL_221012"
    ]
   }
  ],
