--- a/demo/create_video_from_images.ipynb
+++ b/demo/create_video_from_images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "83b1adbd",
+   "id": "1b340f26",
    "metadata": {},
    "source": [
     "## 이미지 디렉토리들을 묶어서, 비디오 만들기"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "245f52cf",
+   "id": "f55c071c",
    "metadata": {},
    "source": [
     "- remove_nolabel_images_and_rename_frames.ipynb을 통해 기존의 이미지 순서대로 rename\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b7663d9b",
+   "id": "06ff41b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "55053eed",
+   "id": "c2d51857",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1bd036a4",
+   "id": "f1cafe71",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
     }
    ],
    "source": [
-    "out = cv2.VideoWriter('fll.mp4',cv2.VideoWriter_fourcc(*'mp4v'), fps, (1920,1080))\n",
+    "out = cv2.VideoWriter('fll_val.mp4',cv2.VideoWriter_fourcc(*'mp4v'), fps, (1920,1080))\n",
     "\n",
     "for filename in tqdm(sorted(glob.glob(source_image_dir+\"*.jpg\"))):\n",
     "    img = cv2.imread(filename)    \n",
@@ -66,36 +66,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dbcb99ce",
+   "cell_type": "markdown",
+   "id": "db9bd18d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## DSL Data 폴더로 옮기기"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c1cf7d8c",
+   "execution_count": 9,
+   "id": "ade6a984",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!mkdir -p  ~/aiboat/aiboat/APP/NAS/datas/sample_video"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "347fe292",
+   "execution_count": 10,
+   "id": "5c7a2662",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee26e32b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "!mv fll_val.mp4 ~/aiboat/aiboat/APP/NAS/datas/sample_video"
+   ]
   }
  ],
  "metadata": {
