--- a/demo/make_mot_format.ipynb
+++ b/demo/make_mot_format.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "cb07ec09",
    "metadata": {},
    "outputs": [
@@ -20,19 +20,21 @@
        "'/home/yyj-avikus/sahi/demo'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import os\n",
+    "import glob\n",
+    "from tqdm import tqdm\n",
     "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "bd9ba4af",
    "metadata": {},
    "outputs": [],
@@ -109,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "7439f748",
    "metadata": {},
    "outputs": [
@@ -117,62 +119,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30.467068557812325\n",
-      "30.467068557812325\n",
-      "0 31168\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[h264 @ 0x55d63f40a500] decode_slice_header error\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Image is None\n",
-      "Image is None\n",
-      "Image is None\n",
-      "Image is None\n",
-      "Image is None\n",
-      "Image is None\n",
-      "Image is None\n",
-      "Image is None\n",
-      "Image is None\n",
-      "Image is None\n",
-      "Image is None\n"
+      "30.00066428692063\n",
+      "30.00066428692063\n",
+      "0 38088\n"
      ]
     }
    ],
    "source": [
-    "video_path = \"../resources/FL_221024_3.mp4\"\n",
+    "video_path = \"../resources/FL_221017_2.mp4\"\n",
     "frame_dirs = \"../resources/export_frame\"\n",
     "\n",
-    "_, source_image_dir = extract_frame(video_path, frame_dirs, every=30, overwrite=True)"
+    "_, source_image_dir = extract_frame(video_path, frame_dirs, start=0, every=3, overwrite=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "38b58939",
+   "execution_count": 16,
+   "id": "7a9d908e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'../resources/export_frame/FL_221017_2/'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "source_image_dir = \"../resources/FLL_VAL/images/\"\n",
-    "source_label_dir = \"../resources/FLL_VAL/labels/\""
+    "source_image_dir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1dd748d9",
+   "metadata": {},
+   "source": [
+    "# 2. 시작, 끝 프레임 지정해서 영상 저장하기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "71429758",
+   "execution_count": 26,
+   "id": "7e5a5bfb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 687/687 [00:20<00:00, 34.13it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "source_image_dir = \"../resources/export_frame/FL_221024\""
+    "fps=30\n",
+    "out = cv2.VideoWriter('FL_221017_2_track01.mp4',cv2.VideoWriter_fourcc(*'mp4v'), fps, (1920,1080))\n",
+    "# //3이 된 값\n",
+    "start, end = 2978, 3664\n",
+    "\n",
+    "for filename in tqdm(sorted(glob.glob(source_image_dir+\"*.jpg\"))[start:end+1]):\n",
+    "    img = cv2.imread(filename)    \n",
+    "    out.write(img)\n",
+    "\n",
+    "out.release()"
    ]
   },
   {
@@ -180,12 +193,12 @@
    "id": "00f1e191",
    "metadata": {},
    "source": [
-    "# 2. 비디오 인퍼런스"
+    "# 3. 비디오 인퍼런스"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "id": "649c59db",
    "metadata": {},
    "outputs": [],
@@ -216,24 +229,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "id": "d075d584",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fll_model_221024_path = '../resources/models/221024_960/best.pt'"
+    "fll_model_221107_track_path = '../resources/models/221107_track/best.pt'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "id": "8b300a4e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fll_model_221024 = AutoDetectionModel.from_pretrained(\n",
+    "fll_model_221107_track = AutoDetectionModel.from_pretrained(\n",
     "    model_type='yolov5',\n",
-    "    model_path=fll_model_221024_path,\n",
+    "    model_path=fll_model_221107_track_path,\n",
     "    confidence_threshold=0.25,\n",
     "    device=\"cuda:0\",\n",
     "    image_size=960\n",
@@ -242,13 +255,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "id": "cc0e53cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = fll_model_221024\n",
-    "model_path = fll_model_221024_path"
+    "model = fll_model_221107_track\n",
+    "model_path = fll_model_221107_track_path"
    ]
   },
   {
@@ -261,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "id": "d3e88a16",
    "metadata": {},
    "outputs": [],
@@ -357,295 +370,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "59ccd660",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4dc51bb496a479f82af13078142237f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='index', max=1515), IntSlider(value=640, description='sli…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from ipywidgets import interact\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
-    "\n",
-    "image_files = sorted(os.listdir(source_image_dir))\n",
-    "\n",
-    "@interact(index=(0, len(image_files)-1),\n",
-    "          slice_size=(0, 640),\n",
-    "          overlap_ratio=(0, 0.5, 0.05),\n",
-    "          custom_slice_x_start=(0, 640),\n",
-    "          custom_slice_y_start=(0, 512),\n",
-    "          custom_slice_mode=(0,3),\n",
-    "          only_full_inference=(0,1))\n",
-    "def show_sample(index=0, slice_size=640, overlap_ratio=0.25,\n",
-    "                custom_slice_x_start=640, custom_slice_y_start=360, custom_slice_mode=2,\n",
-    "                only_full_inference=0):\n",
-    "    image_file = image_files[index]\n",
-    "    image_path = os.path.join(source_image_dir, image_file)\n",
-    "    image = cv2.imread(image_path)\n",
-    "    \n",
-    "    if not only_full_inference:\n",
-    "        slice_result = slice_image(image_path, \n",
-    "                                  slice_width=slice_size,\n",
-    "                                  slice_height=slice_size,\n",
-    "                                  overlap_height_ratio=overlap_ratio,\n",
-    "                                  overlap_width_ratio=overlap_ratio,\n",
-    "                                  custom_slice_x_start=custom_slice_x_start,\n",
-    "                                  custom_slice_y_start=custom_slice_y_start,\n",
-    "                                  custom_slice_mode=custom_slice_mode,\n",
-    "                                  verbose=1)\n",
-    "\n",
-    "        for start_pixel in slice_result.starting_pixels:\n",
-    "            cv2.rectangle(image,\n",
-    "                          start_pixel,\n",
-    "                          [s1+s2 for s1, s2 in zip(start_pixel,[slice_size,slice_size])],\n",
-    "                          color=(255, 255, 0),\n",
-    "                          thickness=2)\n",
-    "        \n",
-    "        result = get_sliced_prediction(image_path,\n",
-    "                                       model,\n",
-    "                                       slice_height=slice_size,\n",
-    "                                       slice_width=slice_size,\n",
-    "                                       postprocess_match_threshold=0.5,\n",
-    "                                       overlap_height_ratio=overlap_ratio,\n",
-    "                                       overlap_width_ratio=overlap_ratio,\n",
-    "                                       custom_slice_x_start=custom_slice_x_start,\n",
-    "                                       custom_slice_y_start=custom_slice_y_start,\n",
-    "                                       custom_slice_mode=custom_slice_mode\n",
-    "                                      )\n",
-    "    else:\n",
-    "        result = get_prediction(image_path, model)\n",
-    "    \n",
-    "    canvas = visualize_object_predictions(image, result.object_prediction_list)\n",
-    "    plt.figure(figsize=(16,16))\n",
-    "    plt.imshow(canvas)\n",
-    "    plt.axis('off')\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f9b035d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def initial_extract(img_dir, label_dir, out_dir):\n",
-    "    if os.path.exists(os.path.join(out_dir, 'val.json')):\n",
-    "        os.remove(os.path.join(out_dir, 'val.json'))\n",
-    "    \n",
-    "    licenses = [\n",
-    "        {\n",
-    "            \"name\": \"\",\n",
-    "            \"id\": 0,\n",
-    "            \"url\": \"\"\n",
-    "        }\n",
-    "    ]\n",
-    "\n",
-    "    info_ = [\n",
-    "        {\n",
-    "            \"contributor\": \"\",\n",
-    "            \"date_created\": \"\",\n",
-    "            \"description\": \"\",\n",
-    "            \"url\": \"\",\n",
-    "            \"version\": \"\",\n",
-    "            \"year\": \"\"\n",
-    "        }\n",
-    "    ]\n",
-    "\n",
-    "    categories = [\n",
-    "        {\n",
-    "            \"id\": 0,\n",
-    "            \"name\": \"Buoy\",\n",
-    "            \"supercategory\": \"\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"id\": 1,\n",
-    "            \"name\": \"Boat\",\n",
-    "            \"supercategory\": \"\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"id\": 2,\n",
-    "            \"name\": \"Channel Marker\",\n",
-    "            \"supercategory\": \"\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"id\": 3,\n",
-    "            \"name\": \"Speed Warning Sign\",\n",
-    "            \"supercategory\": \"\"\n",
-    "        }\n",
-    "    ]\n",
-    "\n",
-    "    img_idx = 0\n",
-    "    annot_idx = 0\n",
-    "\n",
-    "    imgs_list = []\n",
-    "    annots_list = []\n",
-    "\n",
-    "    for label_file in sorted(os.listdir(label_dir)):\n",
-    "        label_file_ = os.path.join(label_dir, label_file)\n",
-    "        img_file_ = os.path.join(img_dir, f'{os.path.splitext(label_file)[0]}.jpg')\n",
-    "        img = Image.open(img_file_)\n",
-    "        image_w, image_h = img.size\n",
-    "\n",
-    "        imgs_list.append({\n",
-    "            'id': img_idx,\n",
-    "            'width': image_w,\n",
-    "            'height': image_h,\n",
-    "            'file_name': f'{os.path.splitext(label_file)[0]}.jpg',\n",
-    "            \"license\": 0,\n",
-    "            \"flickr_url\": \"\",\n",
-    "            \"coco_url\": \"\",\n",
-    "            \"date_captured\": 0\n",
-    "        })\n",
-    "\n",
-    "        with open(label_file_, 'r') as label_f:\n",
-    "            labels = label_f.readlines()\n",
-    "\n",
-    "            for label in labels:\n",
-    "                cat, xc, yc, label_normalized_w, label_normalized_h = list(map(lambda x: int(x) if len(x) == 1 else float(x), label.split()))\n",
-    "                label_w, label_h = image_w * label_normalized_w, image_h * label_normalized_h\n",
-    "                xmin, ymin = (image_w * xc) - (label_w / 2), (image_h * yc) - (label_h / 2)\n",
-    "                \n",
-    "                xmin = 0 if xmin < 0 else xmin\n",
-    "                ymin = 0 if ymin < 0 else ymin\n",
-    "\n",
-    "                annots_list.append({\n",
-    "                    'id': annot_idx,\n",
-    "                    'image_id': img_idx,\n",
-    "                    'category_id': cat,\n",
-    "                    'area': int(label_h * label_w),\n",
-    "                    'bbox': [\n",
-    "                        xmin,\n",
-    "                        ymin,\n",
-    "                        label_w,\n",
-    "                        label_h\n",
-    "                    ],\n",
-    "                    'iscrowd': 0,\n",
-    "                    'attributes': {\n",
-    "                        'type': '',\n",
-    "                        'occluded': False\n",
-    "                    },\n",
-    "                    'segmentation': []\n",
-    "                })\n",
-    "\n",
-    "                annot_idx += 1\n",
-    "\n",
-    "        img_idx += 1\n",
-    "\n",
-    "    out_dict = {\n",
-    "        'licenses': licenses,\n",
-    "        'info': info_,\n",
-    "        'categories': categories,\n",
-    "        'images': imgs_list,\n",
-    "        'annotations': annots_list\n",
-    "    }\n",
-    "    \n",
-    "    if not os.path.exists(out_dir):\n",
-    "        os.makedirs(out_dir, exist_ok=True)\n",
-    "    \n",
-    "    with open(os.path.join(out_dir, 'val.json'), 'w') as out_f:\n",
-    "        print(os.path.join(out_dir, 'val.json'))\n",
-    "        json.dump(out_dict, out_f)\n",
-    "        \n",
-    "    return os.path.join(out_dir, 'val.json')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b59b9510",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# initial_extract(img_dir, label_dir, out_dir)\n",
-    "gt_json_path = initial_extract(source_image_dir, source_label_dir, str(Path(source_image_dir).parent))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13f70c46",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_val_image_dir = '../resources/save_val2/images/'\n",
-    "save_val_label_dir = '../resources/save_val2/labels/'\n",
-    "\n",
-    "os.makedirs(save_val_image_dir, exist_ok=True)\n",
-    "os.makedirs(save_val_label_dir, exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "034b16f2",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# some handy functions to use along widgets\n",
-    "from IPython.display import display, Markdown, clear_output\n",
-    "# widget packages\n",
-    "import ipywidgets as widgets\n",
-    "\n",
-    "from ipywidgets import interact\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
-    "\n",
-    "image_files = sorted(os.listdir(source_image_dir))\n",
-    "label_files = sorted([fn for fn in os.listdir(source_label_dir) if fn.endswith(\"txt\")])\n",
-    "\n",
-    "@interact(index=(0, len(image_files)-1), save=(0,1))\n",
-    "def show_sample(index=0, save=0):\n",
-    "    global button\n",
-    "\n",
-    "    image_file = image_files[index]\n",
-    "    image_path = os.path.join(source_image_dir, image_file)\n",
-    "    image = cv2.imread(image_path)\n",
-    "\n",
-    "    if save == 1:\n",
-    "        label_file = os.path.join(source_label_dir, label_files[index])\n",
-    "        new_label_file_name = f\"VAL_{label_files[index]}\"\n",
-    "        new_image_file_name = f\"VAL_{image_files[index]}\"\n",
-    "\n",
-    "        print(save_val_label_dir+new_label_file_name, save_val_image_dir+new_image_file_name)\n",
-    "        shutil.copy(label_file, save_val_label_dir+new_label_file_name)\n",
-    "        shutil.copy(image_path, save_val_image_dir+new_image_file_name)\n",
-    "    \n",
-    "    result = get_prediction(image_path, model)\n",
-    "    \n",
-    "    canvas = visualize_object_predictions(image, result.object_prediction_list)\n",
-    "    plt.figure(figsize=(16,16))\n",
-    "    plt.imshow(canvas)\n",
-    "    plt.axis('off')\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "id": "86d25590",
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_val_image_dir = '../resources/save_fl221024_3/images/'\n",
-    "save_val_label_dir = '../resources/save_fl221024_3/labels/'\n",
-    "source_image_dir = \"../resources/export_frame/FL_221024_3/\"\n",
+    "save_val_image_dir = '../resources/save_fl221017_2/images/'\n",
+    "save_val_label_dir = '../resources/save_fl221017_2/labels/'\n",
+    "source_image_dir = \"../resources/export_frame/FL_221017_2/\"\n",
     "\n",
     "os.makedirs(save_val_image_dir, exist_ok=True)\n",
     "os.makedirs(save_val_label_dir, exist_ok=True)"
@@ -653,19 +385,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "id": "f4beb239",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84c45db3c6524291b4076c27f435e252",
+       "model_id": "f024f56bd9e24b23b71df3a44177dd42",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='index', max=1037), IntSlider(value=0, description='save'…"
+       "interactive(children=(IntSlider(value=2978, description='index', max=3664, min=2978), IntSlider(value=0, descr…"
       ]
      },
      "metadata": {},
@@ -699,7 +431,7 @@
     "    h = h*dh\n",
     "    return (x,y,w,h)\n",
     "\n",
-    "@interact(index=(0, len(image_files)-1), save=(0,1))\n",
+    "@interact(index=(start, end), save=(0,1))\n",
     "def show_sample(index=0, save=0):\n",
     "    image_file = image_files[index]\n",
     "    image_path = os.path.join(source_image_dir, image_file)\n",
@@ -708,8 +440,8 @@
     "    result = get_prediction(image_path, model)\n",
     "    \n",
     "    if save == 1:\n",
-    "        label_file_name = \"FL221024_2_\"+os.path.splitext(image_file)[0]+\".txt\"\n",
-    "        image_file_name = f\"FL221024_2_{image_files[index]}\"\n",
+    "        label_file_name = \"FL221017_2_\"+os.path.splitext(image_file)[0]+\".txt\"\n",
+    "        image_file_name = f\"FL221017_2_{image_files[index]}\"\n",
     "\n",
     "        shutil.copy(image_path, save_val_image_dir+image_file_name)\n",
     "    \n",
@@ -730,30 +462,6 @@
     "    plt.axis('off')\n",
     "    plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be209b42",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fdcf8075",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "708b9d44",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
