--- a/demo/visualize_dsl_json.ipynb
+++ b/demo/visualize_dsl_json.ipynb
@@ -10,16 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon Oct 24 01:09:21 2022       \r\n",
+      "Thu Oct 27 18:32:30 2022       \r\n",
       "+-----------------------------------------------------------------------------+\r\n",
-      "| NVIDIA-SMI 470.82.01    Driver Version: 470.82.01    CUDA Version: 11.4     |\r\n",
+      "| NVIDIA-SMI 470.141.03   Driver Version: 470.141.03   CUDA Version: 11.4     |\r\n",
       "|-------------------------------+----------------------+----------------------+\r\n",
       "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\r\n",
       "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\r\n",
       "|                               |                      |               MIG M. |\r\n",
       "|===============================+======================+======================|\r\n",
-      "|   0  NVIDIA Graphics...  Off  | 00000000:01:00.0 Off |                  N/A |\r\n",
-      "| N/A   62C    P3     6W /  N/A |   1911MiB /  3913MiB |      5%      Default |\r\n",
+      "|   0  NVIDIA GeForce ...  Off  | 00000000:01:00.0  On |                  N/A |\r\n",
+      "| 26%   36C    P8    15W / 125W |   1940MiB /  5936MiB |      1%      Default |\r\n",
       "|                               |                      |                  N/A |\r\n",
       "+-------------------------------+----------------------+----------------------+\r\n",
       "                                                                               \r\n",
@@ -28,12 +28,12 @@
       "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\r\n",
       "|        ID   ID                                                   Usage      |\r\n",
       "|=============================================================================|\r\n",
-      "|    0   N/A  N/A      1147      G   /usr/lib/xorg/Xorg                 44MiB |\r\n",
-      "|    0   N/A  N/A      1403      G   /usr/bin/gnome-shell                5MiB |\r\n",
-      "|    0   N/A  N/A      1867      G   /usr/lib/xorg/Xorg                325MiB |\r\n",
-      "|    0   N/A  N/A      2040      G   /usr/bin/gnome-shell              189MiB |\r\n",
-      "|    0   N/A  N/A      3991      G   ...818280098758357408,131072      347MiB |\r\n",
-      "|    0   N/A  N/A      7125    C+G   /usr/bin/python3                  884MiB |\r\n",
+      "|    0   N/A  N/A      1142      G   /usr/lib/xorg/Xorg                441MiB |\r\n",
+      "|    0   N/A  N/A      1349      G   /usr/bin/gnome-shell               90MiB |\r\n",
+      "|    0   N/A  N/A      5375      G   ...veSuggestionsOnlyOnDemand       45MiB |\r\n",
+      "|    0   N/A  N/A      7841      C   ...sahi-benchmark/bin/python     1121MiB |\r\n",
+      "|    0   N/A  N/A      9184      G   ...953557414429615954,131072      100MiB |\r\n",
+      "|    0   N/A  N/A     19046      G   ...RendererForSitePerProcess       42MiB |\r\n",
       "+-----------------------------------------------------------------------------+\r\n"
      ]
     }
@@ -44,17 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "602234c7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/yyj/sahi/demo'"
+       "'/home/yyj-avikus/sahi/demo'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "e83ae3e4",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "5c24fcfb",
    "metadata": {},
    "outputs": [],
@@ -107,12 +107,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "36b41676",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DSL_STANDARD_JSON_FILE = '../resources/DSL/result_FL221022_0.25_standard_pred.json'\n",
+    "DSL_STANDARD_JSON_FILE = '../resources/DSL/221024/result_FL221024_0.25_standard_pred.json'\n",
     "\n",
     "with open(DSL_STANDARD_JSON_FILE, 'r') as f:\n",
     "    datas = json.load(f)"
@@ -120,14 +120,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "bb1fc035",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b270de7e845943bba51bc9049bc541b4",
+       "model_id": "8f9de38a3d8e4c16a8c7e8df9c057b7d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -181,20 +181,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c3f7d4b",
+   "id": "1172fda9",
    "metadata": {},
    "source": [
-    "## Slice Prediction"
+    "## Slice Prediction with FULL-Frame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "7cd43ad6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DSL_SLICE_JSON_FILE = '../resources/DSL/result_slice_pred.json'\n",
+    "DSL_SLICE_JSON_FILE = '../resources/DSL/221024/result_FL221024_0.25_slice_pred.json'\n",
     "\n",
     "with open(DSL_SLICE_JSON_FILE, 'r') as f:\n",
     "    datas = json.load(f)"
@@ -202,26 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "f125f972",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "custom_slice_x_start=640\n",
-    "custom_slice_y_start=360\n",
-    "slice_size=512"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "912a9509",
+   "execution_count": 8,
+   "id": "d3df742f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa8f192787244ac79014f2d99ca58b6c",
+       "model_id": "8180dfc5502f49029c5d10f5892f2fd8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -233,6 +221,279 @@
      "output_type": "display_data"
     }
    ],
+   "source": [
+    "from ipywidgets import interact\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "import cv2\n",
+    "\n",
+    "@interact(index=(0, len(image_files)-1))\n",
+    "def show_sample(index=0):\n",
+    "    infos = [ data for data in datas if data['image_id'] == index ]\n",
+    "    image_path = os.path.join(source_image_dir, image_files[index])\n",
+    "    image = cv2.imread(image_path)    \n",
+    "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "    for info in infos:\n",
+    "        bbox = list(map(int, info['bbox']))\n",
+    "        category_name =  info['category_name']\n",
+    "        conf = info['score']\n",
+    "        label = f\"{category_name} {conf:.2f}\"\n",
+    "        \n",
+    "        cv2.rectangle(image,\n",
+    "                      bbox[:2],\n",
+    "                      [ bbox1 + bbox2 for bbox1, bbox2 in zip(bbox[:2], bbox[2:])],\n",
+    "                      color=(255, 0, 0),\n",
+    "                      thickness=2)\n",
+    "        cv2.putText(\n",
+    "            image,\n",
+    "            label,  \n",
+    "            [bbox[0], bbox[1]-10],\n",
+    "            0,\n",
+    "            1,\n",
+    "            (255, 255, 255),\n",
+    "            thickness=3,\n",
+    "        )\n",
+    "        \n",
+    "    plt.figure(figsize=(16,16))\n",
+    "    plt.imshow(image)\n",
+    "    plt.axis('off')\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "53dc5982",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(DSL_STANDARD_JSON_FILE, 'r') as f:\n",
+    "    standard_datas = json.load(f)\n",
+    "\n",
+    "with open(DSL_SLICE_JSON_FILE, 'r') as f:\n",
+    "    slice_datas = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6fae6cf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ce847db94794437784e0e745e81bf2c1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=0, description='index', max=4896), Output()), _dom_classes=('widget-inte…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from ipywidgets import interact\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "import cv2\n",
+    "\n",
+    "    \n",
+    "@interact(index=(0, len(image_files)-1))\n",
+    "def show_sample(index=0):\n",
+    "    standard_infos = [ data for data in standard_datas if data['image_id'] == index ]\n",
+    "    slice_infos = [ data for data in slice_datas if data['image_id'] == index ]\n",
+    "    \n",
+    "    image_path = os.path.join(source_image_dir, image_files[index])\n",
+    "    image1 = cv2.imread(image_path)    \n",
+    "    image1 = cv2.cvtColor(image1, cv2.COLOR_BGR2RGB)\n",
+    "    \n",
+    "    for info in standard_infos:\n",
+    "        bbox = list(map(int, info['bbox']))\n",
+    "        category_name =  info['category_name']\n",
+    "        conf = info['score']\n",
+    "        label = f\"{category_name} {conf:.2f}\"\n",
+    "        \n",
+    "        cv2.rectangle(image1,\n",
+    "                      bbox[:2],\n",
+    "                      [ bbox1 + bbox2 for bbox1, bbox2 in zip(bbox[:2], bbox[2:])],\n",
+    "                      color=(255, 0, 0),\n",
+    "                      thickness=2)\n",
+    "        \n",
+    "        cv2.putText(\n",
+    "            image1,\n",
+    "            label,  \n",
+    "            [bbox[0], bbox[1]-10],\n",
+    "            0,\n",
+    "            1,\n",
+    "            (255, 255, 255),\n",
+    "            thickness=3,\n",
+    "        )\n",
+    "    \n",
+    "    image_path = os.path.join(source_image_dir, image_files[index])\n",
+    "    image2 = cv2.imread(image_path)    \n",
+    "    image2 = cv2.cvtColor(image2, cv2.COLOR_BGR2RGB)\n",
+    "    \n",
+    "    \n",
+    "    for info in slice_infos:\n",
+    "        bbox = list(map(int, info['bbox']))\n",
+    "        category_name =  info['category_name']\n",
+    "        conf = info['score']\n",
+    "        label = f\"{category_name} {conf:.2f}\"\n",
+    "        \n",
+    "        cv2.rectangle(image2,\n",
+    "                      bbox[:2],\n",
+    "                      [ bbox1 + bbox2 for bbox1, bbox2 in zip(bbox[:2], bbox[2:])],\n",
+    "                      color=(255, 0, 0),\n",
+    "                      thickness=2)\n",
+    "        \n",
+    "        cv2.putText(\n",
+    "            image2,\n",
+    "            label,  \n",
+    "            [bbox[0], bbox[1]-10],\n",
+    "            0,\n",
+    "            1,\n",
+    "            (255, 255, 255),\n",
+    "            thickness=3,\n",
+    "        )\n",
+    "        \n",
+    "    fig, axes = plt.subplots(1, 2, figsize=(32,32)) \n",
+    "    plt.subplots_adjust(wspace=0.05, hspace=0.05)\n",
+    "    \n",
+    "    axes[0].axis('off')\n",
+    "    axes[1].axis('off')\n",
+    "    \n",
+    "    axes[0].imshow(image1)\n",
+    "    axes[1].imshow(image2)\n",
+    "    \n",
+    "    plt.axis('off')\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b9b8e2a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipywidgets import interact\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "import cv2\n",
+    "\n",
+    "SAVE_DIR=\"preproc_error\"\n",
+    "\n",
+    "for index in range(0, len(image_files), 20):\n",
+    "    os.makedirs(SAVE_DIR,exist_ok=True)\n",
+    "    standard_infos = [ data for data in standard_datas if data['image_id'] == index ]\n",
+    "    slice_infos = [ data for data in slice_datas if data['image_id'] == index ]\n",
+    "    \n",
+    "    image_path = os.path.join(source_image_dir, image_files[index])\n",
+    "    image1 = cv2.imread(image_path)    \n",
+    "    image1 = cv2.cvtColor(image1, cv2.COLOR_BGR2RGB)\n",
+    "    \n",
+    "    for info in standard_infos:\n",
+    "        bbox = list(map(int, info['bbox']))\n",
+    "        category_name =  info['category_name']\n",
+    "        conf = info['score']\n",
+    "        label = f\"{category_name} {conf:.2f}\"\n",
+    "        \n",
+    "        cv2.rectangle(image1,\n",
+    "                      bbox[:2],\n",
+    "                      [ bbox1 + bbox2 for bbox1, bbox2 in zip(bbox[:2], bbox[2:])],\n",
+    "                      color=(255, 0, 0),\n",
+    "                      thickness=2)\n",
+    "        \n",
+    "        cv2.putText(\n",
+    "            image1,\n",
+    "            label,  \n",
+    "            [bbox[0], bbox[1]-10],\n",
+    "            0,\n",
+    "            1,\n",
+    "            (255, 255, 255),\n",
+    "            thickness=3,\n",
+    "        )\n",
+    "    \n",
+    "    image_path = os.path.join(source_image_dir, image_files[index])\n",
+    "    image2 = cv2.imread(image_path)    \n",
+    "    image2 = cv2.cvtColor(image2, cv2.COLOR_BGR2RGB)\n",
+    "    \n",
+    "    \n",
+    "    for info in slice_infos:\n",
+    "        bbox = list(map(int, info['bbox']))\n",
+    "        category_name =  info['category_name']\n",
+    "        conf = info['score']\n",
+    "        label = f\"{category_name} {conf:.2f}\"\n",
+    "        \n",
+    "        cv2.rectangle(image2,\n",
+    "                      bbox[:2],\n",
+    "                      [ bbox1 + bbox2 for bbox1, bbox2 in zip(bbox[:2], bbox[2:])],\n",
+    "                      color=(255, 0, 0),\n",
+    "                      thickness=2)\n",
+    "        \n",
+    "        cv2.putText(\n",
+    "            image2,\n",
+    "            label,  \n",
+    "            [bbox[0], bbox[1]-10],\n",
+    "            0,\n",
+    "            1,\n",
+    "            (255, 255, 255),\n",
+    "            thickness=3,\n",
+    "        )\n",
+    "        \n",
+    "    fig, axes = plt.subplots(1, 2, figsize=(32,32)) \n",
+    "    plt.subplots_adjust(wspace=0.05, hspace=0.05)\n",
+    "    \n",
+    "    axes[0].axis('off')\n",
+    "    axes[1].axis('off')\n",
+    "    \n",
+    "    axes[0].imshow(image1)\n",
+    "    axes[1].imshow(image2)\n",
+    "    \n",
+    "    plt.axis('off')\n",
+    "    plt.savefig(f\"{SAVE_DIR}/{index:010d}.png\", bbox_inches='tight', pad_inches=0)\n",
+    "    plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a21521a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e538e65",
+   "metadata": {},
+   "source": [
+    "## Slice Prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f125f972",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "custom_slice_x_start=640\n",
+    "custom_slice_y_start=360\n",
+    "slice_size=512"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "912a9509",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from ipywidgets import interact\n",
     "import matplotlib.pyplot as plt\n",
@@ -290,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "2b5c31ab",
    "metadata": {},
    "outputs": [],
@@ -307,25 +568,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "38e012af",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22f639afdfc145da80378ee7ac6b9e50",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='index', max=4896), Output()), _dom_classes=('widget-inte…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ipywidgets import interact\n",
     "import matplotlib.pyplot as plt\n",
